Many fixes were made. Also, a way to connect to an Access database was made